--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 __pycache__
-temp_screenshot
+temp_screenshot/screenshot.png
+temp_screenshot/screenshot_debug.png
+temp_screenshot/screenshot1.png
+temp_screenshot/screenshot2.png
