宝宝血量判断

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ temp_screenshot/screenshot.png
 temp_screenshot/screenshot_debug.png
 temp_screenshot/screenshot1.png
 temp_screenshot/screenshot2.png
+temp_screenshot/screenshot.png.tmp
