--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ temp_screenshot/screenshot_debug.png
 temp_screenshot/screenshot1.png
 temp_screenshot/screenshot2.png
 temp_screenshot/screenshot.png.tmp
+temp_screenshot/
