--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
 __pycache__
-temp_screenshot/screenshot.png
-temp_screenshot/screenshot_debug.png
-temp_screenshot/screenshot1.png
-temp_screenshot/screenshot2.png
-temp_screenshot/screenshot.png.tmp
-temp_screenshot/
+temp_screenshot/*
+*.json
